exports[`/processor.js > composition > should allow comments before composes 1`] = `
{
  "multiple-composes.css": {
    "a": [
      "mc_a"
    ],
    "b": [
      "mc_a",
      "mc_b"
    ]
  }
}
`;

exports[`/processor.js > composition > should allow composes anywhere 1`] = `
{
  "multiple-composes.css": {
    "a": [
      "mc_a"
    ],
    "b": [
      "mc_a",
      "mc_b"
    ],
    "c": [
      "mc_a",
      "mc_b",
      "mc_c"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose a single class (multi-rule dependent class) 1`] = `
{
  "single-composes.css": {
    "a": [
      "mc_b",
      "mc_a"
    ],
    "b": [
      "mc_b"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose a single class 1`] = `
{
  "single-composes.css": {
    "a": [
      "mc_a"
    ],
    "b": [
      "mc_a",
      "mc_b"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose from global keyword 1`] = `
{
  "global-compose.css": {
    "a": [
      "b",
      "c",
      "d",
      "mc_a"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose from globals 1`] = `
{
  "global-compose.css": {
    "a": [
      "b",
      "mc_a"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose from other files and locally 1`] = `
{
  "packages/processor/test/specimens/composes/external-second-and-local-first-composes.css": {
    "custom": [
      "mc_custom"
    ],
    "externalComposeRule": [
      "mc_custom",
      "mc_red",
      "mc_externalComposeRule"
    ]
  },
  "packages/processor/test/specimens/deps/classes.css": {
    "red": [
      "mc_red"
    ],
    "blue": [
      "mc_blue"
    ],
    "green": [
      "mc_green"
    ],
    "yellow": [
      "mc_yellow"
    ],
    "block": [
      "mc_block"
    ],
    "flex": [
      "mc_flex"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose from other files in multiple declarations 1`] = `
{
  "packages/processor/test/specimens/composes/external-composes-multiple-declarations.css": {
    "ruleWithComposes": [
      "mc_red",
      "mc_blue",
      "mc_ruleWithComposes"
    ]
  },
  "packages/processor/test/specimens/deps/classes.css": {
    "red": [
      "mc_red"
    ],
    "blue": [
      "mc_blue"
    ],
    "green": [
      "mc_green"
    ],
    "yellow": [
      "mc_yellow"
    ],
    "block": [
      "mc_block"
    ],
    "flex": [
      "mc_flex"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose from other files in multiple declarations via local compose 1`] = `
{
  "packages/processor/test/specimens/composes/external-compose-via-local-compose.css": {
    "ruleWithSingleCompose": [
      "mc_red",
      "mc_ruleWithSingleCompose"
    ],
    "ruleWithLocalComposes": [
      "mc_red",
      "mc_ruleWithSingleCompose",
      "mc_blue",
      "mc_ruleWithLocalComposes"
    ],
    "nextRuleWithLocalComposes": [
      "mc_red",
      "mc_ruleWithSingleCompose",
      "mc_blue",
      "mc_nextRuleWithLocalComposes"
    ]
  },
  "packages/processor/test/specimens/deps/classes.css": {
    "red": [
      "mc_red"
    ],
    "blue": [
      "mc_blue"
    ],
    "green": [
      "mc_green"
    ],
    "yellow": [
      "mc_yellow"
    ],
    "block": [
      "mc_block"
    ],
    "flex": [
      "mc_flex"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose from other files in multiple declarations via local compose 2 1`] = `
{
  "packages/processor/test/specimens/composes/external-compose-via-local-compose2.css": {
    "ruleWithSingleCompose": [
      "mc_red",
      "mc_ruleWithSingleCompose"
    ],
    "ruleWithLocalComposes": [
      "mc_blue",
      "mc_red",
      "mc_ruleWithSingleCompose",
      "mc_ruleWithLocalComposes"
    ]
  },
  "packages/processor/test/specimens/deps/classes.css": {
    "red": [
      "mc_red"
    ],
    "blue": [
      "mc_blue"
    ],
    "green": [
      "mc_green"
    ],
    "yellow": [
      "mc_yellow"
    ],
    "block": [
      "mc_block"
    ],
    "flex": [
      "mc_flex"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose from other files in multiple declarations via local compose 3 1`] = `
{
  "packages/processor/test/specimens/composes/external-compose-via-local-compose3.css": {
    "ruleWithSingleCompose": [
      "mc_red",
      "mc_ruleWithSingleCompose"
    ],
    "ruleWithLocalComposes": [
      "mc_red",
      "mc_ruleWithSingleCompose",
      "mc_blue",
      "mc_ruleWithLocalComposes"
    ]
  },
  "packages/processor/test/specimens/deps/classes.css": {
    "red": [
      "mc_red"
    ],
    "blue": [
      "mc_blue"
    ],
    "green": [
      "mc_green"
    ],
    "yellow": [
      "mc_yellow"
    ],
    "block": [
      "mc_block"
    ],
    "flex": [
      "mc_flex"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose from other files in multiple declarations via local compose 4 1`] = `
{
  "packages/processor/test/specimens/composes/external-compose-via-local-compose4.css": {
    "ruleWithSingleCompose": [
      "mc_red",
      "mc_ruleWithSingleCompose"
    ],
    "ruleWithLocalComposes": [
      "mc_blue",
      "mc_red",
      "mc_ruleWithSingleCompose",
      "mc_ruleWithLocalComposes"
    ]
  },
  "packages/processor/test/specimens/deps/classes.css": {
    "red": [
      "mc_red"
    ],
    "blue": [
      "mc_blue"
    ],
    "green": [
      "mc_green"
    ],
    "yellow": [
      "mc_yellow"
    ],
    "block": [
      "mc_block"
    ],
    "flex": [
      "mc_flex"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose from other files in single declaration 1`] = `
{
  "packages/processor/test/specimens/composes/external-composes-single-declaration.css": {
    "ruleWithComposes": [
      "mc_red",
      "mc_blue",
      "mc_ruleWithComposes"
    ]
  },
  "packages/processor/test/specimens/deps/classes.css": {
    "red": [
      "mc_red"
    ],
    "blue": [
      "mc_blue"
    ],
    "green": [
      "mc_green"
    ],
    "yellow": [
      "mc_yellow"
    ],
    "block": [
      "mc_block"
    ],
    "flex": [
      "mc_flex"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose locally and from other files 1`] = `
{
  "packages/processor/test/specimens/composes/external-first-and-local-second-composes.css": {
    "custom": [
      "mc_custom"
    ],
    "externalComposeRule": [
      "mc_red",
      "mc_custom",
      "mc_externalComposeRule"
    ]
  },
  "packages/processor/test/specimens/deps/classes.css": {
    "red": [
      "mc_red"
    ],
    "blue": [
      "mc_blue"
    ],
    "green": [
      "mc_green"
    ],
    "yellow": [
      "mc_yellow"
    ],
    "block": [
      "mc_block"
    ],
    "flex": [
      "mc_flex"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose multiple classes (multi-rule dependent class) 1`] = `
{
  "multiple-composes.css": {
    "a": [
      "mc_a"
    ],
    "b": [
      "mc_a",
      "mc_c",
      "mc_b"
    ],
    "c": [
      "mc_c"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose multiple classes (multiple declarations) 1`] = `
{
  "multiple-composes.css": {
    "a": [
      "mc_a"
    ],
    "b": [
      "mc_b"
    ],
    "c": [
      "mc_a",
      "mc_b",
      "mc_c"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose multiple classes (single declaration) 1`] = `
{
  "multiple-composes.css": {
    "a": [
      "mc_a"
    ],
    "b": [
      "mc_b"
    ],
    "c": [
      "mc_a",
      "mc_b",
      "mc_c"
    ]
  }
}
`;

exports[`/processor.js > composition > should compose with escaped classes 1`] = `
{
  "escaped-classes.css": {
    "sm:foo": [
      "mc_sm:foo"
    ],
    "c": [
      "mc_sm:foo",
      "mc_c"
    ]
  }
}
`;

exports[`/processor.js > composition > should remove composes from the output css (composes first) 1`] = `
"/* remove-composes.css */\\n.mc_a { color: red; }\\n.mc_b { background: blue; }"
`;

exports[`/processor.js > composition > should remove composes from the output css (composes last) 1`] = `
"/* remove-composes.css */\\n.mc_a { color: red; }\\n.mc_b { background: blue; }"
`;

exports[`/processor.js > composition > should remove composes from the output css (composes middle) 1`] = `
"/* remove-composes.css */\\n.mc_a { color: red; }\\n.mc_b { background: blue; border-color: green; }"
`;

exports[`/processor.js > composition > should remove composes from the output css (only composes) 1`] = `
"/* remove-composes.css */\\n.mc_a { color: red; }"
`;
